# libshew

./: .gitlab-ci.yml  meson.build  meson.options
.gitlab-ci/: lsan-suppressions.txt
src/: meson.build  shew-external-window-wayland.c  shew-external-window-wayland.h  shew-external-window.c  shew-external-window.h  shew-window-exporter.c  shew-window-exporter.h
test-project/: meson.build
tests/: meson.build  test-exporter.c  test-external-window.c
